# my_leetcode_solved

./: .gitignore  .prettierrc  README.md  package-lock.json  package.json  test.js
2024_legacy/CSharp/: Csharp.sln
2024_q4/Csharp/: .editorconfig  Csharp.csproj  Program.cs
2024_q4/Py/: .pylintrc
2025/CSharp/: .editorconfig  Csharp.sln
2025/golang/: Makefile  go.mod  main.go
2025/typescript/: package-lock.json  package.json  pnpm-lock.yaml  readme.md  tsconfig.jest.json
24-old/CSharp/: Csharp.csproj  trash-code-for-f25b.txt
24-old/Typescript/: package-lock.json
CSharp/: .editorconfig  .gitignore  Csharp.csproj  Program.cs  forLeetCode.sln
CSharp/Done/: S0001-Two-Sum.cs  S0002-Add-Two-Numbers.cs  S0014-Longest-Common-Prefix-Easy-Ver.cs  S0014-Longest-Common-Prefix.cs  S0020-Valid-Parentheses.cs  S0026-Remove-Duplicates-from-Sorted-Array.cs  S0027-Remove-Element.cs  S0027RemoveElement.cs  S0053-Maximum-Subarray.cs  S0062-Unique-Paths.cs  S0070-Climbing-Stairs.cs  S0077-Combinations.cs  S0108-Ary-To-BST.cs  S01235-Max-Profit-In-Job.cs  S0134-Gas-Station.cs  S0189-Rotate-Array.cs  S0200-Number-Of-Islands.cs  S0208-Implement-Trie.cs  S0274-H-Index.cs  (+2 more)
Py/: .gitignore  .pylintrc  common_commands.txt  mypy.ini
Typescript/: .prettierrc  package.json  pnpm-lock.yaml
csharp/: README.md
py/: 0001.py  pyproject.toml
py/helper/: list_node.py  solution_loader.py
py/lc0001/: test.py
py/lc0125/: sol.py  test.py
py/lc0141/: sol.py  test.py
src/: index.ts
ts/: pnpm-lock.yaml
typescript/: package-lock.json  package.json  tsconfig.json
(+624 files in other folders)
