[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-leetcode-solved"
version = "0.0.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py", "test.py"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
